# RAG-DataAfriqueHub

./: .env.example  .gitignore  README.md  aq*  docker-compose.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  README_API.md  ToDo.md  main.py  presentation.md  pyproject.toml  requirements.txt  setup_api.py
backend/configs/: base.yaml  free.yaml  huggingface_test.yaml  hybrid.yaml  premium.yaml
backend/configs/rag/: citations.yaml  secure.yaml  simple.yaml
backend/configs/retrieval/: bm25_pure.yaml  dense_simple.yaml  hybrid_rerank.yaml  premium_cohere.yaml
backend/data/documents/: doc1.txt
backend/scripts/: download_model.py
backend/src/: __init__.py  implementations.py  rag_api.py  requirements.txt  test_llm.py
backend/src/Chunkers/: basic_chunker.py  semantic_chunker.py
backend/src/Embedders/: dummy_embedder.py  openai_embedder.py
backend/src/Loaders/: text_loader.py
backend/src/api/: dependencies.py  main.py
backend/src/core/: config_schema.py  factory.py  interfaces.py  models.py  orchestrator.py
backend/src/examples/: 01_quickstart.ipynb  02_advanced_config.ipynb
backend/src/implementations/: __init__.py  llm_query_rewriter.py
backend/src/llm/: __init__.py  base_llm.py  llm_adapter.py  mistral_llm.py  ollama_llm.py  openai_llm.py  presentation.md  prompt_manager.py  requreiments.txt
backend/src/prompts/: example_prompts.py
backend/src/retrieval/: bm25_retriever.py  dense_retriever.py  reranker.py  retrieval_strategy.py
backend/src/tests/: test_config_validation.py  test_integration_api.py  test_llm.py  (+1 more)
(+25 files in other folders)
