[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.20.4",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.2",
    "tqdm>=4.67.3",
    "uvicorn>=0.40.0",
    "huggingface-hub>=1.4.1",
    "mistral>=21.0.0",
    "fastapi>=0.128.8",
    "python-multipart>=0.0.22",
    "pypdf>=6.7.0",
    "langdetect>=1.0.9",
    "faiss-cpu>=1.13.2",
    "mistralai>=1.12.1",
    "chromadb>=1.5.0",
    "ollama>=0.6.1",
]
